--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </p>
       </div>
     </div>
+    <h2 class="responsive-text">
+      Sorry, this website cannot run in this device
+    </h2>
   </body>
   <script
     type="module"
