--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="signup-content">
         <h3 class="signup-title">Create account</h3>
         <p class="signup-already">
-          Already have an account? <a href="#">Sign in</a>
+          Already have an account?
+          <a href="https://vuikonao.github.io/Login" target="_blank"
+            >Login in</a
+          >
         </p>
         <div class="signup-input">
           <input type="text" class="width--full" placeholder="Nickname" />
